When details wraps on small screens, the margins did not align. This fixes so the text is all aligned to right on the arrow even if on line below.

--- a/NHS111/NHS111.Web/nhs-online.css
+++ b/NHS111/NHS111.Web/nhs-online.css
@@ -285,6 +285,8 @@ details {
         cursor: pointer;
         display: inline-block;
         margin-bottom: em(5);
+        padding-left: 1.5em;
+        text-indent: -1.4em;
         position: relative;
         width: 100%;
     }
